--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "helmet": "^3.5.0",
+    "json": "^9.0.6",
     "json-loader": "^0.5.4",
+    "jsonp": "^0.2.1",
     "lodash": "^4.16.2",
     "method-override": "^2.3.8",
     "mongoose": "^4.9.3",
